# roboSim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  reasoning.md
.cache/clangd/index/: features.h.839A4F3F7C9A4375.idx  main.cpp.3987AD5309210799.idx  rigidBody.cpp.F98EDFC67E7D29E2.idx  rigidBody.hpp.0668C29EF982799D.idx  stl_function.h.51000605949196E2.idx  stl_iterator_base_types.h.820909C26FFF163D.idx  type_traits.643A7643AB46DA7D.idx  wchar.h.A65FEA87E595D0B5.idx
include/: rigidBody.hpp
src/: main.cpp  rigidBody.cpp
